Bug 1528180 - Don't align scroll offsets to layer pixels when using WebRender. r=tnikkel a=RyanVM

This position is only invalidated from FrameLayerBuilder, that's not a very good
signal.

This would get out of sync when using WebRender, and APZ messages will send
sub-pixel scroll positions that will get wrongly adjusted, causing small scroll
offsets which scroll anchoring would incorrectly try to correct, which is the
ultimate cause of the jittering.

Differential Revision: https://phabricator.services.mozilla.com/D37875

--HG--
extra : source : a37238f046d563fee862b36231ecbfd1ee18b0d8